fix: name the same helper on every run of one source
`HelperGraph.of` built the recursive set in declaration order and handed it to
`Set.copyOf`, whose iteration order the JVM salts per run. A reader that reports
one member of a mutual cycle reports the one it reaches first, so the same source
raised E1813 against a different helper on a different run — three names over six
runs of a six-member cycle.

The copy keeps the order it was built in. The test names the helper rather than
the code alone; asserting the code is what let this stand.

Closes #533

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01EcSEqYJWeuyuwCvUU6Pgv7